# Anchor

./: README.md  fast_api_app.py  main.py  pyproject.toml  reproduce_silent_success.py  sample_calculator.py  test_fuzzy_patch.py  test_patch_lib.py  test_stream.py
.anchor/backups/: fast_api_app.py.20260201232952.bak  history.json  sample_calculator.py.20260201205536.bak  sample_calculator.py.20260201230938.bak
anchor/: __init__.py  backup.py  cli.py  context.py  conversation.py  llm.py  patch.py  streaming.py  ui.py
anchor_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
testing_ground/: writer_test.py
testing_ground/.anchor/backups/: history.json
tests/: test_context.py  test_patch.py
